--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-elasticsearch (0.4.5-chaos1) RELEASE; urgency=low
+
+  * Non-maintainer upload.
+  * Uses upstream release 0.4.5 as base
+
+ -- Nick Douma <n.douma@nekoconeko.nl>  Wed, 09 Apr 2014 12:00:00 +0100
+
 python-elasticsearch (0.4.4-chaos1) RELEASE; urgency=low
 
   * Non-maintainer upload.
