--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,6 @@
-python-elasticsearch (1.0.0-chaos1) RELEASE; urgency=low
+python-elasticsearch-1.0 (1.0.0-chaos5) RELEASE; urgency=low
 
   * Non-maintainer upload.
   * Uses upstream release 1.0.0 as base
 
- -- Nick Douma <n.douma@nekoconeko.nl>  Wed, 09 Apr 2014 12:00:00 +0100
-
+ -- Nick Douma <n.douma@nekoconeko.nl>  Wed, 09 Apr 2014 12:30:00 +0100
