--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,8 @@
-python-elasticsearch (0.4.5-chaos1) RELEASE; urgency=low
+python-elasticsearch-0.4 (0.4.5-chaos5) RELEASE; urgency=low
 
   * Non-maintainer upload.
   * Uses upstream release 0.4.5 as base
 
- -- Nick Douma <n.douma@nekoconeko.nl>  Wed, 09 Apr 2014 12:00:00 +0100
+  * Fix packaging derp
 
-python-elasticsearch (0.4.4-chaos1) RELEASE; urgency=low
-
-  * Non-maintainer upload.
-  * Uses upstream release 0.4.4 as base
-
- -- Nick Douma <n.douma@nekoconeko.nl>  Thu, 14 Mar 2014 12:00:00 +0100
-
+ -- Nick Douma <n.douma@nekoconeko.nl>  Wed, 09 Apr 2014 12:30:00 +0100
