--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-elasticsearch-1.0 (1.2.0-chaos1) RELEASE; urgency=low
+
+  * Non-maintainer upload.
+  * Uses upstream release 1.2.0 as base
+
+ -- Nick Douma <n.douma@nekoconeko.nl>  Mon, 03 Nov 2014 12:00:00 +0100
+
 python-elasticsearch-1.0 (1.0.0-chaos6) RELEASE; urgency=low
 
   * Non-maintainer upload.
