--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+python-elasticsearch-1.0 (1.2.0-chaos2) RELEASE; urgency=low
+
+  * Non-maintainer upload.
+  * Uses upstream release 1.2.0 as base
+
+  * Fix dependency on urllib3 to use Ubuntu 14.04 version
+
+ -- Nick Douma <n.douma@nekoconeko.nl>  Thu, 22 Jan 2015 17:00:00 +0100
+
 python-elasticsearch-1.0 (1.2.0-chaos1) RELEASE; urgency=low
 
   * Non-maintainer upload.
